--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">Home</string>
     <string name="title_curtain">Curtain</string>
     <string name="title_light">Light</string>
+    <string name="loading">Loading</string>
 </resources>
